# maos-cuda-optics

./: Makefile.am  configure.ac
cuda/: Makefile.am  accphi.cu  common.h  cucmat.cu  cumat.h  curmat.cu  cuwfs.cu  fdpcg.cu  fit.cu  gpu.h  gpu_mvm.cpp  moao.cu  mvm_daemon.cu  mvm_direct.cu  mvm_test.cu  mvm_trans.cu  mvmfull_real.cu  pcg.cu  perfevl.cu  perfinit.cu  pywfs.cu  recon.cu  recon_base.cu  solve.cu  solve.h  tomo.cu  tomo.h  types.h  utils.cu  utils.h  wfsgrad.cu  wfsinit.cu  wfsints.cu
docs/: 40_results.cpp  50_guidelines.cpp
lib/: accphi.cpp  draw.cpp  fractal.cpp  fractal_do.cpp  genotf.cpp  hyst.cpp  kalman.cpp  kalman.h  locfft.cpp  misc.cpp  mkdtf.cpp  mkdtf.h  mkg.cpp  muv.cpp  pcg.cpp  prop_grid.cpp  psd.cpp  psd.h  readcfg.cpp  servo.cpp  slaving.cpp
maos/: Makefile.am  ahst.cpp  filter.cpp  main.cpp  moao.cpp  perfevl.cpp  pywfs.cpp  pywfs.h  recon.cpp  recon_utils.cpp  save.cpp  setup_parms.cpp  setup_powfs.cpp  setup_recon.cpp  setup_recon_fit.cpp  setup_recon_prep.cpp  sim.cpp  sim_utils.cpp  types.h  utils.cpp  wfsints.cpp
math/: array.h  blas.cpp  cell.cpp  cell.h  chol.cpp  chol.h  cmath.cpp  defs.h  dmath.cpp  fft.cpp  fft.h  lmath.cpp  loc.cpp  locbin.cpp  mat.cpp  mat.h  matbin.cpp  matcomp.cpp  mathdef.h  mathmisc.cpp  matmath.cpp  matmath.h  matmmap.cpp  numtype.h  random.cpp  random.h  smath.cpp  sp.cpp  sp.h  spmm.cpp  suitesparse.cpp  type.h  zfarr.cpp  zfarr.h  zmath.cpp
mex/: Makefile.am  interface.h  io.cpp  write.cpp
scripts/: gcov.sh  maos_check.sh  replace.sh
skyc/: genpistat.cpp  setup_aster.cpp  setup_star.cpp  (+2 more)
(+29 files in other folders)
